--- a/frontend/react-app/index.html
+++ b/frontend/react-app/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IrvineHacks 2024</title>
+    <title>Diagnosify</title>
   </head>
   <body>
     <div id="root"></div>
