--- a/frontend/react-app/index.html
+++ b/frontend/react-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+            href="https://fonts.googleapis.com/css?family=Open Sans"
             rel="stylesheet"
     />
 
